# Tasks

./: README.md
Assembler/: README.md  danya.asm  mycode.asm  mycode2.asm  mycodeMul.asm  strlen.asm
Assembler/Calculations/: adder.asm  adderWithMinus.asm  hexAdder.asm  muller.asm  power.asm
Assembler/Laba 1/: add_arrs.asm  almostGoodAdder[++--].asm  defaultAdder.asm  defaultMuller.asm  defaultPower.asm  dz.asm  reader.asm  reallyWorkableMuller.asm  testAdderCause45and55.asm  testAdderWithMinus.asm  testMuller.asm  testNativeAdd.asm  testPower.asm  trueAdder.asm  trueMull.asm
Assembler/Laba 2/: AdderThatYouLove.asm  AnotherAdder.asm  tesstAdder.asm  testAdder.asm  testMuller.asm
Assembler/RSA/: README.md  c.txt  d.txt  decode.ASM  decode.asm  encode.ASM  encode.asm  m.txt  mod.txt
C/: README.md
C++/: README.md
C++/CodeForces_Training/: R460_A.cpp  R460_B.cpp  R462_A.cpp
C++/FordFulkerson/: main.cpp
C++/Informatics_Training/: Kadane.cpp  main.cpp  soeasy.cpp
C++/Laba2/: main.cpp  pqueue.h
C++/Laba3/: CMakeLists.txt  formula.h  main.cpp  temp.txt
C++/NY9_CPP/: BridgeNum.cpp  Cpm.cpp  Dividers.cpp  Prima.cpp  (+9 more)
Graphics/: README.md
Graphics/[Lab7] Optimization/: Base.cpp  Base.h  CMakeLists.txt  Config.cpp  Config.h  Cube.cpp  Mesh.cpp  Mesh.h  Polygon.h  Sphere.cpp  Sphere.h  config.json  defines.h  main.cpp  optimization.txt
Java/: README.md
JavaScript/: .~lock.Конспект.docx#  AlsoSprachZarathustra.txt  AlsoSprachZarathustraWithMisprints.txt  README.md  grep.js  speller.js  tree.js  wc.js
Scala/: 1.scala
Scheme/: README.md  laba1.scm~  smth
(+379 files in other folders)
